--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@ table.redTable tfoot .links a{
   const ENVIRONMENT = 'mypurecloud.de';
   const API_ENDPOINT = 'https://api.mypurecloud.de/api/v2/analytics/queues/observations/query';
   const API_ENDPOINT2 = 'https://api.mypurecloud.de/api/v2/analytics/conversations/activity/query';
-  const REDIRECT_URI = 'http://localhost:3000/statqueues'; 
+  const REDIRECT_URI = 'https://CGBGNS.github.io/CGBMAPGNS/index.html'; 
   
   var gToken = getParameterByName('access_token');
   const queues = {"a9aa307e-9683-4403-b7b5-db3cf1156cca": { name: "SI24_AUT-ASISTENCIAVIAJE_ESSD0201" },	  
