--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@ table.redTable tfoot .links a{
   const CLIENT_ID = '50999a4b-409c-4846-a249-4357e0e293a5';
   const ENVIRONMENT = 'mypurecloud.de';
   const API_ENDPOINT = 'https://api.mypurecloud.de/api/v2/analytics/queues/observations/query';
-  const REDIRECT_URI = 'https://CGBGNS.github.io/CGNMAPGNS/index.html';
+  const REDIRECT_URI = 'https://CGBGNS.github.io/CGBMAPGNS/index.html';
 
 const queues = {
       "eefbe40d-62b7-4276-8527-a2e06f421113":{name:"AGR_ABANDONO-AUTOS_ESSD9999"},      
