--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@ table.redTable tfoot .links a{
      data: JSON.stringify(requestData2ndAPI),
      contentType: 'application/json',
      success: function(data2ndAPI) {
-      displayData(data1stAPI,data2ndAPI);
+      getThirdAPIData(data1stAPI,data2ndAPI);
     }
    });
 
