--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
                         <td>${getMetricValue(dataItems, "oInteracting")}</td>
                         <td>${iWaitingAPI2}</td>	                  
               <td>${formatTime(lgtAPI2)}</td>	
-              <td>${getMetricStateValue(dataItems, "09285548-27dc-4693-b348-26ce839850da")}</td>		
+              <td>${iWaitingAPI2}</td>		
                 
                       </tr>`;
           
