--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
                         <td>${getMetricValue(dataItems, "oInteracting")}</td>
                         <td>${iWaitingAPI2}</td>	                  
               <td>${formatTime(lgtAPI2)}</td>	
-              <td>${iWaitingAPI2}</td>		
+              <td>${getMetricStateValue(dataItems, "227b37e2-f1d0-4dd0-8f50-badd7cf6d158")}</td>		
                 
                       </tr>`;
           
