--- a/index.html
+++ b/index.html
@@ -249,7 +249,11 @@
                             <th>Interacting</th>
                             <th>Waiting</th>                       	
                 <th>Longest Waiting</th>
-                <th>Gestion Contacto</th>												
+                <th>Break</th>
+                <th>Gestión BackOffice</th>
+                <th>Gestión contacto</th>
+                <th>Descanso</th>
+                <th>Pausa Visual</th>											
                           </tr>`;
         queueData.append(headerRow);
       const undesiredMediaTypes = ["message", "chat", "email"];
@@ -280,7 +284,11 @@
                         <td>${getMetricValue(dataItems, "oInteracting")}</td>
                         <td>${iWaitingAPI2}</td>	                  
               <td>${formatTime(lgtAPI2)}</td>	
-              <td>${getMetricStateValue(dataItems, "227b37e2-f1d0-4dd0-8f50-badd7cf6d158")}</td>		
+              <td>${getMetricStateValue(dataItems, "227b37e2-f1d0-4dd0-8f50-badd7cf6d158")}</td>
+              <td>${getMetricStateValue(dataItems, "6b3a63b6-5634-4aff-8838-674ffadb23de")}</td>
+              <td>${getMetricStateValue(dataItems, "09285548-27dc-4693-b348-26ce839850da")}</td>
+              <td>${getMetricStateValue(dataItems, "46d1ad03-8828-4161-a6b8-dcec7a42d006")}</td>
+              <td>${getMetricStateValue(dataItems, "e1e0e671-d01b-4c41-8a5d-b870641b9c0a")}</td>		
                 
                       </tr>`;
           
