--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
                             <th>Interacting</th>
                             <th>Waiting</th>                       	
                 <th>Longest Waiting</th>
-                <th>Break</th>
+                <th>On Queue (idle+interacting)</th>
                 <th>Gestión BackOffice</th>
                 <th>Gestión contacto</th>
                 <th>Descanso</th>
@@ -284,7 +284,7 @@
                         <td>${getMetricValue(dataItems, "oInteracting")}</td>
                         <td>${iWaitingAPI2}</td>	                  
               <td>${formatTime(lgtAPI2)}</td>	
-              <td>${getMetricStateValue(dataItems, "227b37e2-f1d0-4dd0-8f50-badd7cf6d158")}</td>
+              <td>${getMetricStateValue(dataItems, "INTERACTING")+getMetricStateValue(dataItems, "IDLE")}</td>
               <td>${getMetricStateValue(dataItems, "6b3a63b6-5634-4aff-8838-674ffadb23de")}</td>
               <td>${getMetricStateValue(dataItems, "09285548-27dc-4693-b348-26ce839850da")}</td>
               <td>${getMetricStateValue(dataItems, "46d1ad03-8828-4161-a6b8-dcec7a42d006")}</td>
