--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@
                 <th>Otros</th>												
                           </tr>`;
         queueData.append(headerRow);
-      const undesiredMediaTypes = ["message", "chat", "email"];
+      const undesiredMediaTypes = ["callback","message", "chat", "email"];
     
         // Renderización
         sortedResults.forEach(result => {
