--- a/index.html
+++ b/index.html
@@ -9479,11 +9479,11 @@ const data2 ={
     }
     
     
-    function displayData(data1stAPI, data2ndAPI) {
+    function displayData(data1, data2) {
       const queueData = $("#queueData");
       queueData.empty();
   
-      const uniqueQueueIds = [...new Set(data1stAPI.results.map(item => item.group.queueId))];
+      const uniqueQueueIds = [...new Set(data1.results.map(item => item.group.queueId))];
 
       console.log('Unique Queue IDs:', uniqueQueueIds);
 
@@ -9502,8 +9502,8 @@ const data2 ={
                       </tr>
                       ${uniqueQueueIds.map(queueId => {
 			                const queueName = queues[queueId] || 'Desconocido'; // Obtiene el nombre de la cola del mapeo
-                      const rowData = data1stAPI.results.filter(item => item.group.queueId === queueId);
-			                const rowData2 = data2ndAPI.results.filter(item => item.group.queueId === queueId);
+                      const rowData = data1.results.filter(item => item.group.queueId === queueId);
+			                const rowData2 = data2.results.filter(item => item.group.queueId === queueId);
                         const sumInteracting = rowData.reduce((sum, item) => sum + getMetricValue(item.data, 'oInteracting'), 0);
                         const sumWaiting = rowData2.reduce((sum, item) => sum + getWaitingValue(item.data, 'oWaiting'), 0);
                         const activityDate = rowData2.length > 0 ? rowData2[0].entities[0].activityDate : 'N/A';
