--- a/index.html
+++ b/index.html
@@ -236,7 +236,8 @@
       const uniqueQueueIds = [...new Set(data1stAPI.results.map(item => item.group.queueId))];
 
       console.log('Unique Queue IDs:', uniqueQueueIds);
-
+      console.log('Unique Queue IDs:', data1stAPI);
+      console.log('Unique Queue IDs:', data2stAPI);
       const tableHtml = `<table border="1">
                       <tr>
                         <th>Nombre de la cola</th>
