--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
 
       console.log('Unique Queue IDs:', uniqueQueueIds);
       console.log('Unique Queue IDs:', data1stAPI);
-      console.log('Unique Queue IDs:', data2stAPI);
+      console.log('Unique Queue IDs:', data2ndAPI);
       const tableHtml = `<table border="1">
                       <tr>
                         <th>Nombre de la cola</th>
