--- a/index.html
+++ b/index.html
@@ -76,8 +76,7 @@
     <button onclick="loadData()">Refrescar Datos</button>
     <br>
     <table class="redTable">
-    
-    <div id="tabla-container"></div>
+    <tbody id="tabla-container"></tbody>
     </table>
     <!--button onclick="refreshData()">Refrescar Datos</button-->
     
