--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
                         console.log(sumInteracting);
                         const sumWaiting = rowData.reduce((sum, item) => sum + getWaitingValue(item.data, "oWaiting"), 0);
                         console.log(sumWaiting)
-                        const activityDate = rowData.length > 0 ? rowData2[0].entities[0].activityDate : "N/A";
+                        const activityDate = rowData.length > 0 ? rowData[0].entities[0].activityDate : "N/A";
                         //console.log(activityDate)
 			const OnQueue = rowData.reduce((sum, item) => sum + getMetricStatusValue(item.data, "e08eaf1b-ee47-4fa9-a231-1200e284798f"), 0);
       console.log(OnQueue);
